got gradient descent to work

--- a/sparse.ipynb
+++ b/sparse.ipynb
@@ -23,12 +23,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression\n",
+    "\n",
+    "To keep our tests as vanilla as possible, our algos will be written from scratch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LogisticRegression:\n",
+    "    def __init__(self, learning_step, learning_rate):\n",
+    "        self.learning_step = learning_step\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.weights = None\n",
+    "        self.bias = None\n",
+    "        \n",
+    "    def linear_reg(self, w, x):\n",
+    "        return np.dot(x, w)\n",
+    "    \n",
+    "    def sigmoid(self, z):\n",
+    "        return 1.0 / ( 1.0 + np.exp(-1.0 * z))\n",
+    "    \n",
+    "    def fit(self, x, y):\n",
+    "        self.intercepts = np.zeros((x.shape[0], 1))\n",
+    "        x = np.concatenate((self.intercepts, x), axis=1)\n",
+    "        self.weights = np.zeros(x.shape[1])\n",
+    "        for step in range(self.learning_step):\n",
+    "            z = self.linear_reg(self.weights, x)\n",
+    "            sig = self.sigmoid(z)\n",
+    "            gradient = np.dot(x.transpose(), (sig - y)) / y.size\n",
+    "            self.weights -= self.learning_rate * gradient \n",
+    "        print(self.weights)\n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        self.intercepts = np.zeros((x.shape[0], 1))\n",
+    "        x = np.concatenate((self.intercepts, x), axis=1)\n",
+    "        return self.sigmoid(np.dot(x, self.weights))"
    ]
   },
   {
@@ -41,165 +86,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LogisticRegression:\n",
-    "    def __init__(self, learning_step, learning_rate):\n",
-    "        self.learning_step = learning_step\n",
-    "        self.learning_rate = learning_rate\n",
-    "        self.weights = None\n",
-    "        \n",
-    "    def linear_reg(self, w, x):\n",
-    "        return np.dot(x, w)\n",
-    "    \n",
-    "    def sigmoid(self, z):\n",
-    "        return 1 / ( 1 + np.exp(-1 * z))\n",
-    "    \n",
-    "    def fit(self, x, y):\n",
-    "        w = np.array([[0.0] * x.shape[1]])\n",
-    "        for step in range(self.learning_step):\n",
-    "            z = self.linear_reg(w, x)\n",
-    "            sig = sigmoid(z)\n",
-    "            gradient = (1/x.shape[0]) * np.sum((y - sig))\n",
-    "            w += gradient * self.learning_rate\n",
-    "        self.weights = w\n",
-    "    \n",
-    "    def predict(self, x):\n",
-    "        z = self.linear_reg(self.weights, x)\n",
-    "        return sigmoid(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.vstack(\n",
+    "num_zeros  = 10\n",
+    "num_ones = 20\n",
+    "x = np.concatenate(\n",
     "    (\n",
-    "        np.zeros((3, 1)), \n",
-    "        np.ones((50, 1))\n",
+    "        np.zeros((num_zeros, 1)), \n",
+    "        np.ones((num_ones, 1))\n",
     "    )\n",
     ")\n",
-    "y = x"
+    "y = np.concatenate(\n",
+    "    (\n",
+    "        np.zeros((num_zeros)), \n",
+    "        np.ones((num_ones))\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.38570938 11.87369213]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[0.5       ],\n",
-       "       [0.5       ],\n",
-       "       [0.5       ],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072],\n",
-       "       [0.77058072]])"
+       "array([0.00456069, 0.00456069, 0.00456069, 0.00456069, 0.00456069,\n",
+       "       0.00456069, 0.00456069, 0.00456069, 0.00456069, 0.00456069,\n",
+       "       0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 ,\n",
+       "       0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 ,\n",
+       "       0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 ,\n",
+       "       0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 , 0.9984807 ])"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr = LogisticRegression(10, 0.2)\n",
+    "lr = LogisticRegression(100000, 0.02)\n",
     "lr.fit(x, y)\n",
     "lr.predict(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.44136242]])"
-      ]
-     },
-     "execution_count": 336,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(lr.weights)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0],\n",
-       "       [0],\n",
-       "       [1]])"
+       "(60, 1)"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(x)"
+    "x.shape"
    ]
   },
   {
@@ -340,6 +305,41 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
